# ifm

./: Makefile  Makefile.project_config  README.md
scripts/: .gitignore  get-no-processors.sh
src/: Makefile
src/libs/: Makefile  Makefile.cmake.rules  Makefile.rules.autoconf  subdirs.local
src/libs/libcurl/: Makefile
src/libs/libeigen3/: .gitignore  Makefile
src/libs/libflann/: .gitignore  Makefile
src/libs/libglog/: Makefile
src/libs/libo3d3xx/: .gitignore  Makefile  Makefile.camera  Makefile.framegrabber  Makefile.image  o3d3xx.pro
src/libs/libo3d3xx/patches/libo3d3xx-0.4.9/cmake/modules/: Findo3d3xx_camera.cmake  Findo3d3xx_framegrabber.cmake
src/libs/libo3d3xx/patches/libo3d3xx-0.4.9/modules/camera/: CMakeLists.txt
src/libs/libo3d3xx/patches/libo3d3xx-0.4.9/modules/camera/src/libo3d3xx_camera/: CMakeLists.txt
src/libs/libo3d3xx/patches/libo3d3xx-0.4.9/modules/framegrabber/src/libo3d3xx_framegrabber/: CMakeLists.txt  pkg-config-template.pc.in
src/libs/libo3d3xx/patches/libo3d3xx-0.4.9/modules/image/: CMakeLists.txt
src/libs/libopencv/: .gitignore  Makefile
src/libs/libpcl/: .gitignore  Makefile
src/libs/libxmlrpc/: Makefile  xmlrpc-c-1.39.11.tgz
